Made it useable on mobile.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, maximum-scale=1.0" />
-    <title>Rehearsal App</title>
+    <meta name="viewport" content="width=device-width, height=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable:no" />
+    <title>Chord Chaos</title>
   </head>
   <body>
     <div id="root"></div>
